# ImageMix

./: CMakeLists.txt  config.cfg  readme.md
include/: lib_cv.h  log.h
src/: main.cpp
src/opencv/: copy_modify.cpp  tank.cpp
